Minor styling fixes for textoverflow

--- a/cdap-ui/app/cdap/components/ServiceStatus/ServiceStatus.scss
+++ b/cdap-ui/app/cdap/components/ServiceStatus/ServiceStatus.scss
@@ -21,7 +21,7 @@ $circle-top-offset: 2px;
 .service-status {
   padding-top: 5px;
   margin-left: 15px;
-  width: 209px;
+  width: 225px;
   display: inline-block;
   cursor: pointer;
   position: relative;
@@ -76,11 +76,11 @@ $circle-top-offset: 2px;
       outline: none;
       color: #333333;
       position: absolute;
-      left: -202.5px;
-      top: -4px;
+      left: -195.5px;
+      top: 0;
       border: none;
       margin: 0;
-      width: 200px;
+      width: 220px;
       padding-top: 0;
       padding-bottom: 0;
       z-index: 1501;
@@ -142,7 +142,6 @@ $circle-top-offset: 2px;
       .status-label {
         color: #000000;
         font-weight: bold;
-        margin-left: 19px;
       }
 
       .fa-file-text {
@@ -221,7 +220,7 @@ $circle-top-offset: 2px;
     font-size: 14px;
     font-weight: bold;
     color: #ffffff;
-    max-width: 180px;
+    max-width: 200px;
     word-wrap: break-word;
   }
 
